--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
     "test": "mocha --recursive ./test"
   },
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "lodash": "^4.16.4"
   },
   "author": "thajo",
   "license": "ISC",
